local-minikube-virtualbox/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: django-ingress
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-app
            port: 
              number: 80
